--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ button {
   text-align: center;
   width: 100%;
   height: 45px;
-  margin: 10px 0;
+  margin: 12px 0;
   padding: 30px 10px;
   font-family: "Inter", sans-serif;
   font-style: normal;
@@ -42,7 +42,7 @@ a {
 }
 .profile-container {
   display: flex;
-  margin: 22px 0;
+  margin: 20px 0;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -50,9 +50,14 @@ a {
 h2 {
   font-weight: bolder;
   font-size: 25px;
+  margin-top: 22px;
 }
-#slack{
+#slack {
   display: none;
+}
+.link-container {
+  margin: 12px 0;
+  padding: 30px;
 }
 .profile-container > img {
   border-radius: 50%;
@@ -66,4 +71,15 @@ h2 {
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
   -o-border-radius: 50%;
+}
+
+.icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  width: 100%;
+}
+.icons img {
+  margin: 10px;
 }
