--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
   box-sizing: border-box;
   font-family: "Inter", sans-serif;
 }
+.App {
+  padding: 25px;
+}
 button {
   display: flex;
   align-items: center;
@@ -42,7 +45,7 @@ a {
 }
 .profile-container {
   display: flex;
-  margin: 20px 0;
+  margin: 14px 0;
   justify-content: center;
   flex-direction: column;
   align-items: center;
@@ -82,4 +85,24 @@ h2 {
 }
 .icons img {
   margin: 10px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+.footer h4 {
+  color: #667085;
+}
+
+/* Responsiveness */
+
+@media only screen and (max-width: 600px) {
+  .footer {
+    flex-direction: column;
+  }
+  .footer div {
+    margin: 13px 0;
+  }
 }
