--- a/src/App.css
+++ b/src/App.css
@@ -86,23 +86,120 @@ h2 {
 .icons img {
   margin: 10px;
 }
+.footer-whole {
+  margin: 10px 0;
+}
 .footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 10px 0;
+  margin: 20px 0;
 }
 .footer h4 {
   color: #667085;
 }
 
+/* Contact */
+.contact {
+  display: grid;
+
+  place-items: center;
+}
+.contact-head h2 {
+  color: #101828;
+  line-height: 44px;
+  font-weight: bolder;
+  margin: 10px 0;
+}
+.contact-head p {
+  margin: 30px 0;
+  line-height: 30px;
+  font-weight: 500;
+}
+form input[type="text"],
+form input[type="email"],
+form textarea {
+  height: 44px;
+  padding: 10px 5px;
+  background: #ffffff;
+  width: 100%;
+  border: 1px solid #d0d5dd;
+
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+form input[type="text"]:focus,
+form input[type="email"]:focus,
+form textarea:focus {
+  outline: 1px solid #1570ef;
+  border: 1px solid #1570ef;
+  box-shadow: 1px 1px 2.2px 2.3px #0da6ff;
+}
+form textarea {
+  background: #ffffff;
+  width: 100%;
+  height: 120px;
+  border: 1px solid #d0d5dd;
+  resize: none;
+  box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+  border-radius: 8px;
+}
+
+.names {
+  display: flex;
+  justify-content: space-between;
+}
+input {
+  font-weight: 700;
+}
+form label {
+  display: block;
+  font-weight: bolder;
+  margin: 12px 0;
+  color: #344054;
+}
+input[type="checked"] {
+  cursor: pointer;
+  margin-right: 20px;
+}
+.checked {
+  display: flex;
+  font-size: 13px;
+  justify-content: space-between;
+  padding: 10px;
+}
+.checked h4 {
+  margin: 0 10px;
+}
+#btn__submit {
+  background-color: #1570ef;
+  color: #fff;
+  cursor: pointer;
+}
+#btn__submit:hover {
+  background-color: #0da6ff;
+}
 /* Responsiveness */
 
 @media only screen and (max-width: 600px) {
   .footer {
     flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
   }
   .footer div {
     margin: 13px 0;
   }
+  .names {
+    flex-direction: column;
+  }
+}
+
+.red {
+  display: block;
+  margin: 10px 0;
+  color: red;
+}
+.not {
+  display: none;
 }
