--- a/src/App.css
+++ b/src/App.css
@@ -120,11 +120,11 @@ form input[type="text"],
 form input[type="email"],
 form textarea {
   height: 44px;
-  padding: 10px 5px;
+  padding: 10px 18px;
   background: #ffffff;
   width: 100%;
   border: 1px solid #d0d5dd;
-
+  font-weight: bold;
   box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
   border-radius: 8px;
 }
